# deepagent-template

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md  SI_시작_가이드.md
.antigravitycli/: 76fff3c1-e222-4095-bbe4-6956521941e2.json
.github/workflows/: ci.yml
client/: .gitignore  DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AdminView.tsx  ChatView.tsx
deploy/: .gitignore  SETUP.md  dependencies.md
deploy/k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
mcp/: .gitignore  DESIGN.md
server/: .env.example  .gitignore  DESIGN.md  main.py  pyproject.toml
server/app/: __init__.py  agent.py  config.py  database.py  main.py  routes.py  streaming.py  tools.py  vfs.py
server/scripts/: reseed_vfs.py
server/tests/: test_streaming.py
